--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -27,5 +27,5 @@ jobs:
           server: '${{ secrets.TENCENT_SERVER_HOST }}'
           ssh_private_key: '${{ secrets.TENCENT_SERVER_PRIVATE_KEY }}'
           local_path: 'test-cd-docker/dist/*'
-          remote_path: '/root/test-cd-docker
+          remote_path: '/root/test-cd-docker’
           args: "-o ConnectTimeout=5"
