--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -16,16 +16,14 @@ jobs:
           node-version: "16.x"
       - name: 安装依赖
         run: npm install
-        working-directory: test-cd-docker
       - name: 前端项目打包
         run: npm run build
-        working-directory: test-cd-docker
       - name: 发布腾讯云
         uses: wlixcc/SFTP-Deploy-Action@v1.0 # 使用 SFTP 协议上传到腾讯云
         with:
           username: 'root'
           server: '${{ secrets.TENCENT_SERVER_HOST }}'
           ssh_private_key: '${{ secrets.TENCENT_SERVER_PRIVATE_KEY }}'
-          local_path: 'test-cd-docker/dist/*'
+          local_path: './dist/*'
           remote_path: '/root/test-cd-docker'
           args: "-o ConnectTimeout=5"
