--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -18,11 +18,12 @@ jobs:
       - name: 前端项目打包
         run: npm run build
       - name: 发布腾讯云
-        uses: wlixcc/SFTP-Deploy-Action@v1.0 # 使用 SFTP 协议上传到腾讯云
+        uses: burnett01/rsync-deployments@5.2.1
         with:
-          username: 'root'
-          server: '${{ secrets.TENCENT_SERVER_HOST }}'
-          ssh_private_key: '${{ secrets.TENCENT_SERVER_PRIVATE_KEY }}'
-          local_path: './dist/*'
-          remote_path: '/www/test-cd-docker'
-          args: "-o ConnectTimeout=5"
+          switches: -avzr --delete --exclude="" --include="" --filter=""
+          path: ./dist
+          remote_path: /www/test-cd-docker
+          remote_host: ${{ secrets.TENCENT_SERVER_HOST }}
+          remote_port: 22
+          remote_user: root
+          remote_key: ${{ secrets.TENCENT_SERVER_PRIVATE_KEY }}
