--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -17,6 +17,14 @@ jobs:
         run: npm install
       - name: 前端项目打包
         run: npm run build
+      - name: 创建远程目录
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.TENCENT_SERVER_HOST }}
+          username: root
+          key: ${{ secrets.TENCENT_SERVER_PRIVATE_KEY }}
+          port: 22
+          script: 'cd /www/ && ./mkdir.sh test-cd-docker'
       - name: 发布腾讯云
         uses: burnett01/rsync-deployments@5.2.1
         with:
