--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,14 +9,27 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@main
+
       - name: setup nodejs
         uses: actions/setup-node@v2
         with:
           node-version: "16.x"
+      
+      - name: 获取分支号
+        id: vars
+        run: echo ::set-output name=short_ref::${GITHUB_REF#refs/*/}
+
       - name: 安装依赖
         run: 'npm install'
+
       - name: 前端项目打包
         run: npm run build
+
+      - name: 构建镜像
+        run: | 
+          docker build ./dist --file Dockerfile -t test-cd-docker:v${{ steps.vars.outputs.short_ref }}
+          docker save -o test-cd-docker_v${{ steps.vars.outputs.short_ref }}.tar test-cd-docker:v${{ steps.vars.outputs.short_ref }}
+
       - name: 创建远程目录
         uses: appleboy/ssh-action@master
         with:
@@ -25,11 +38,12 @@ jobs:
           key: ${{ secrets.TENCENT_SERVER_PRIVATE_KEY }}
           port: 22
           script: 'cd /www/ && ./mkdir.sh test-cd-docker'
-      - name: 发布腾讯云
+
+      - name: 上传镜像
         uses: burnett01/rsync-deployments@5.2.1
         with:
           switches: -avzr --delete --exclude="" --include="" --filter=""
-          path: ./dist/
+          path: ./test-cd-docker_v${{ steps.vars.outputs.short_ref }}.tar
           remote_path: /www/test-cd-docker
           remote_host: ${{ secrets.TENCENT_SERVER_HOST }}
           remote_port: 22
